Update recommendation to get based on existing user
